Bug 47813 - Wrong alignment of numbers inside math matrices
Summary: Wrong alignment of numbers inside math matrices
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
3.4.0 release
Hardware: All All
: high major
Assignee: Takeshi Abe
URL:
Whiteboard: bibisected35 bibisected35older target...
Keywords: regression
: 46543 53143 62964 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-24 11:31 UTC by b_r_e_f
Modified: 2016-10-25 18:40 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
Wrong alignment of numbers inside math matrices (116.79 KB, application/force-download)
2012-03-24 11:31 UTC, b_r_e_f
Details
Good alignment of numbers inside math matrices (OO 3.3.0) (103.59 KB, application/binary)
2012-04-06 11:19 UTC, b_r_e_f
Details
Wrong alignment of numbers inside math matrices (LO 3.5.1.2) (88.56 KB, application/pdf)
2012-04-06 12:08 UTC, b_r_e_f
Details
Good alignment of numbers inside math matrices (OO 3.3.0) (80.95 KB, application/pdf)
2012-04-06 12:19 UTC, b_r_e_f
Details
Export of testcase ODT from inside hybrid PDF (22.31 KB, application/vnd.oasis.opendocument.text)
2012-07-03 20:15 UTC, Robinson Tryon (qubit)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description b_r_e_f 2012-03-24 11:31:04 UTC
Created attachment 58984 [details]
Wrong alignment of numbers inside math matrices

The instructions alignr , alignc, and  alignl are no more operational with matrix command. Their consequences are bizarre.
See attachment for exact description and examples.

This bug appeared with version 3.4 and is still present in 3.5.1.2.
(The 3.3 version does not have this bug.)
The same bug appears with Open Office new versions...

Tested on Mac OS X 10.6.8 (Snow Leopard) and Mac OS X 10.7.3 (Lion).
Comment 1 b_r_e_f 2012-04-06 11:19:31 UTC
Created attachment 59600 [details]
Good alignment of numbers inside math matrices (OO 3.3.0)

Compare both attachments.
Alignment is correct with "old" 3.3 versions of LO and OO,
but no more with the 3.4 and 3.5 versions.
Comment 2 b_r_e_f 2012-04-06 12:08:30 UTC
Created attachment 59601 [details]
Wrong alignment of numbers inside math matrices (LO 3.5.1.2)
Comment 3 b_r_e_f 2012-04-06 12:19:11 UTC
Created attachment 59602 [details]
Good alignment of numbers inside math matrices (OO 3.3.0)
Comment 4 Ivan Timofeev (retired) 2012-04-08 23:21:15 UTC
*** Bug 46543 has been marked as a duplicate of this bug. ***
Comment 5 Robinson Tryon (qubit) 2012-07-03 20:15:58 UTC
Created attachment 63794 [details]
Export of testcase ODT from inside hybrid PDF

While running bibisect (3.5) on this bug, I was unable to properly open the hybrid PDFs with the earliest 3.5 builds. I'm pulling-out the ODT from the BugsInLO3.5 testcase file to make testing easier/possible.
Comment 6 Robinson Tryon (qubit) 2012-07-03 20:17:42 UTC
Regression does appear in oldest version of bibisect-3.5.tar.lzma and must be older.

(If anyone has/makes a bibisect for 3.4, I'll gladly run it against these bugs!)
Comment 7 Regina Henschel 2012-12-02 20:56:12 UTC
*** Bug 53143 has been marked as a duplicate of this bug. ***
Comment 8 José Guilherme Vanz 2013-05-28 16:08:49 UTC
I can reproduce this bug in Version 4.0.2.2 (Build ID: 400m0(Build:2)) running in Ubuntu 13.04
Comment 9 Joel Madero 2014-05-23 17:22:23 UTC
*** Bug 62964 has been marked as a duplicate of this bug. ***
Comment 10 b_r_e_f 2014-10-01 20:40:31 UTC
Here is the easy way I found to resolve this problem I pointed out 2 years ago.

Inside the matrix code (in Math module), negative numbers should be written with the large minus sign « – », instead of the narrow one « - ».

On an Apple mac keyboard, the large minus sign is obtained via simultaneous keys [alt][maj][+=], where [maj] stands for the (majuscule) capital letters key.

The output in Text (out of Math module) is the same large minus sign, but the alignment (left, center, right) is now respected.

Tested on LO 4.2.6.2 and OO 4.1.1 (running under Mavericks).
Comment 11 tommy27 2014-10-08 05:29:34 UTC
--> b_r_e_f@yahoo.ca

please do not change version field. it should indicate first release where the bug appeared not latest. I'm reverting it to 3.4.0 right now.

regarding the status of the bug, the thing you describe looks like a workaround and not as a fix by a developer.

@Joel
how should we label this? WORKSFORME?
Comment 12 Regina Henschel 2015-12-04 12:43:41 UTC
This is not fixed. Using a minus as text is only a workaround for using a negative number. This workaround works the same as putting an empty string before the number.
Comment 13 Jean-Baptiste Faure 2016-04-10 15:31:13 UTC
Changed OS to All as there are duplicates for other OS.

Best regards. JBF
Comment 14 Commit Notification 2016-07-08 12:11:14 UTC
Takeshi Abe committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b39596b109e05e6b49687e072bcb1e0b39b21dcc

tdf#47813 Fix alignment for SmUnHorNode

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.