tdf#47813 Fix alignment for SmUnHorNode

Originally SmUnHorNode::Arrange() was somewhat kludgy. This change
implements a similar manner with SmBinHorNode::Arrange().

Change-Id: Ic18d2e7f70becfabb2c651719926e358a4585526